# opengl

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
src/: glad.c  global.h  o001_window.cpp  o002_triangles.cpp  o003_twoTriangles.cpp  o004_abstraction.cpp  o005_texture.cpp  o006_imgui.cpp  o007_transformation.cpp  o008_coordinates.cpp  o009_camera.cpp  o010_color.cpp  o011_phongLighting.cpp  o012_material.cpp  o013_lightingMaps.cpp  o014_lightcaster.cpp
src/myGL/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h  myGL.h
src/shader/: basic.shader  light.shader  o005.shader  o007.shader  o008.shader  o010.shader  o011.shader  o012.shader  o013.shader  o014.shader
